# c64rust

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
crates/c64/: Cargo.toml
crates/c64/src/: c64.rs  lib.rs  main.rs
crates/c64/src/c64/: c64.rs  cia.rs  cia6526.rs  io.rs  keyboard.rs  memory.rs  mod.rs  runtime.rs  vic_ii.rs
crates/c64/src/client/: c64_client.rs  mod.rs
crates/c64/src/key_utils/: character_sets.rs  converters.rs  key_code.rs  mod.rs  scancodes.rs  ui_events.rs
crates/gui/: Cargo.toml
crates/gui/src/: config.rs  gui.rs  main.rs
crates/gui/src/gui/: address_dialog.rs  asm_view.rs  breakpoints_view.rs  cpu_state.rs  handlers.rs  machine_screen.rs  main_screen.rs  memory_view.rs  mod.rs  ui_state.rs  variables_view.rs
crates/gui/src/messaging/: channel.rs
crates/gui/src/utils/: color.rs  keyboard.rs  mod.rs
crates/hardware/: Cargo.toml
crates/hardware/src/: main.rs
crates/machine/: Cargo.toml  c64.toml
crates/machine/src/: client.rs  error.rs  lib.rs  main.rs  utils.rs
crates/machine/src/cli/: cli_args.rs  cli_utils.rs  mod.rs  profile.rs
crates/machine/src/client/: client.rs  client_error.rs  client_event.rs  direct_client.rs  mod.rs  runtime.rs
crates/machine/src/debugger/: breakpoint.rs  debugger.rs  debugger_state.rs  mod.rs  variable.rs
crates/machine/src/emulator/: errors.rs  mod.rs
crates/machine/src/emulator/abstractions/: addressable.rs  async_device.rs  circuit.rs  component.rs  device.rs  machine.rs  mod.rs  pin.rs  pin_builder.rs  pins.rs  port.rs  ram.rs  tickable.rs
crates/machine/src/emulator/components/: cia_6526.rs  hm62256b.rs  mod.rs  nand.rs  oscilator.rs  pla_82S100.rs
crates/machine/src/emulator/components/cia_6526/: cia_6526.rs  mod.rs  tod.rs
crates/machine/src/emulator/cpus/: mod.rs
crates/machine/src/emulator/cpus/mos6502/: mnemonic.rs  mod.rs  opcodes_def.rs  opcodes_impl.rs  operand.rs  operation_def.rs  steppers.rs
crates/machine/src/emulator/cpus/mos6510/: mod.rs  mos6510.rs
crates/machine/src/emulator/cpus/w65c02/: mod.rs  pins.rs  w65c02.rs
crates/machine/src/events/: engine.rs  events.rs  mod.rs
crates/machine/src/machine/: machine.rs  machine_config.rs  machine_events.rs  macros.rs  memory.rs  mod.rs  mos6502_machine.rs  mos6502_memory.rs
crates/machine/src/machines/: ben_eater.rs  c64.rs  mod.rs
crates/machine/src/mos6502/: address_mode.rs  cpu.rs  mnemonic.rs  mod.rs  opcodes_def.rs  opcodes_impl.rs  operand.rs  operation.rs  operation_def.rs  processor_status.rs  registers.rs  steppers.rs
crates/mos6502/: Cargo.toml
crates/mos6502/src/: cli.rs  lib.rs  main.rs  mos6502.rs  utils.rs
crates/mos6502/src/machine/: machine.rs  machine_events.rs  mos6502_machine.rs
crates/mos6502/src/mos6502/: cpu.rs  mnemonic.rs
docs/: references.md
profiles/: hello-os.toml  test.toml
rom/: README.md  hello-rom.p  hello.rom
rom/src/: hello-c64.asm  keyboard.asm
src/: c64.rs  cli_args.rs  cli_utils.rs  gui.rs  machine.rs  main-c64.rs  main-gui.rs  main.rs  mos6510.rs  tests.rs
src/c64/: c64.rs  c64_config.rs  cia6526.rs  keyboard.rs  memory.rs  runtime.rs  vic_ii.rs
src/gui/: address_dialog.rs  cpu_state.rs  machine_screen.rs  main-screen.rs  main_screen.rs  screen.rs  ui_state.rs
src/machine/: machine.rs  machine_config.rs  memory.rs  mos6502_machine.rs  mos6502_memory.rs  ram.rs
src/mos6510/: address_mode.rs  cpu.rs  mnemonic.rs  models.rs  opcodes_impl.rs  operand.rs  operation.rs  operation_def.rs  operations.rs  processor_flag.rs  processor_status.rs  registers.rs
src/tests/: arithmetic_tests.rs  branch_tests.rs  comparison_tests.rs  jump_tests.rs  shift_tests.rs  test_utils.rs
tests/: README.md  run.sh
tests/asm/: adc.asm  mul1.asm  mul2.asm  sbc.asm
tests/src/: adc.asm  add-sub-16bit.asm  bcd-full.asm  bcd-simple.asm  bcd.asm  cmp.asm  mul1.asm  mul2.asm  sbc.asm  shift.asm
tests/src/common/: test_routines.asm
tests/src/roms/: tests-rom.asm
