[package]
name = "c64emu"
description = "DDR's Commodore 64 emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2"
cursive = { version="0.20", default-features=false, features=["termion-backend"] }
substring = "1.4.5"
tokio = { version = "1.32.0", features = ["time"] }

[[bin]]
name = "machine"
path = "src/main.rs"

[[bin]]
name = "c64"
path = "src/main-c64.rs"

[[bin]]
name = "gui"
path = "src/main-gui.rs"
