[package]
name = "gui"
authors = ["ddrcode"]
description = "DDR's Commodore 64 emulator"
version = "0.1.0"
edition = "2021"


[dependencies]
machine = { path="../machine/" }
c64 = { path="../c64/" }
clap = { version = "4.4.2", features = ["derive"] }
colored = "2"
cursive = { version="0.20", default-features=false, features=["termion-backend"] }
cursive_hexview = { git="https://github.com/hellow554/cursive_hexview.git" }
# cursive_hexview = "0.7"
substring = "1.4.5"
log = "0.4.20"
keyboard-types = { version="0.7", features=["webdriver"] }
lazy_static = "1.4.0"
anyhow = "1.0.75"

[[bin]]
name = "gui"
path = "src/main.rs"

